# rag-learn

./: pyproject.toml  requirements.txt
01_DataParsing/: 01_data_intgestion.ipynb  02_data_parsing_pdf.ipynb  03_data_parsing_doc.ipynb  04_csv_data_parsing.ipynb
01_DataParsing/course_files/: 1-dataingestion.ipynb
01_DataParsing/data/structured_files/: inventory.xlsx
02_VectorEmbeddingAnDB/: 01_embedding.ipynb  02_embedding.ipynb  03_gemini_embedding.ipynb
03_Vector_Store/: 01_chromadb.ipynb
03_Vector_Store/chroma_db/: chroma.sqlite3
03_Vector_Store/course/: 1-chromadb.ipynb
04_AdvancedChunking/: 01_semantic_chunking.ipynb  langchain_intro.txt
05_Hybrid_Retriever/: 01_denseparse.ipynb  02_reranking.ipynb  03_mmr.ipynb  langchain_sample.txt  mmr_rag_practice_document.txt
06_Query_Enhancement/: 01_query_expansion.ipynb  02_query_decompostion.ipynb  03_HyDE.ipynb  langchain.txt
06_Query_Enhancement/output/langchain/: chroma.sqlite3
06_Query_Enhancement/output/steve_jobs/: chroma.sqlite3
